--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ html, body {
 #grid-container {
     display: grid;
     grid-template-columns: 20% 80%;
-    grid-template-rows: 10% 10% 70% 10%;
+    grid-template-rows: 1fr 1fr 20fr 1fr;
     width: 100vw;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 .card-container {
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 #header {
@@ -40,10 +40,11 @@ html, body {
     grid-row-end: 4;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
     gap: 50px;
     box-sizing: border-box;
     padding: 20px;
+    background-color: #ECECEC;
 }
 
 #footer {
@@ -54,16 +55,19 @@ html, body {
 }
 
 .card {
-    border: 1px solid black;
+    
     border-radius: 10px;
+    /* min-width: 1fr;  */
 }
 
 #article-section {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    /* grid-template-rows: repeat(3, 1fr); */
     /* box-sizing: border-box; */
     gap: 15px;
+    padding: 20px;
+    background-color: #ECECEC;
 }
 
 #nav {
@@ -74,8 +78,9 @@ html, body {
 }
 
 .article-card {
-    border: 1px solid black;
+    
     height: 200px;
     text-align: center;
+    background-color: #c2b7b7;
 }
 
